<resources>
    <string name="app_name">App Scheduler</string>
    <string name="appSchedulerTitle">App Scheduler</string>
    <string name="emptyListHome">No app added. Create a new one by clicking on the <b>ADD APP</b> button.</string>
    <string name="addApp">Add app for scheduling</string>
    <string name="scheduleApp">Schedule App</string>
    <string name="selectApp">Select App</string>
    <string name="goToAppList">Go To App List</string>
    <string name="scheduleTiming">Schedule Timing</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="note">Note</string>
    <string name="exampleHint">Description of this schedule</string>
    <string name="appList">App List</string>
    <string name="recordSaved">Record Saved</string>
    <string name="canNotSavedRecord">App can not be scheduled, please try again</string>
    <string name="recordUpdated">Record updated</string>
    <string name="canNotUpdateRecord">Can not be updated, please try again.</string>
    <string name="delete_title">Delete?</string>
    <string name="cancelDialog">Cancel the dialog</string>
    <string name="no">No</string>
    <string name="delete_item">Delete this schedule</string>
    <string name="ok">Yes</string>
    <string name="removeThisApp">Remove/cancel this app from the list?</string>
    <string name="appSchedulerHistoryTitle">App History</string>
    <string name="addNewApp">Add App</string>
    <string name="deleteAllSchedule">Delete All Schedules</string>
    <string name="restartAllSchedule">Restart all schedules</string>
    <string name="pleaseSelectApp">Please select an app to continue.</string>
    <string name="need_permission">Need Permission</string>
    <string name="need_overlay_permission">Do you want to allow overlay permission?</string>
    <string name="cantContinue">"Without the overlay permission you can not continue. "</string>
    <string name="appSchedulerHistoryDelete">Delete all history</string>
    <string name="successfullyDeletedAllHistory">Successfully deleted all apps history.</string>
    <string name="noHistoryFound">No History found.</string>
    <string name="emptyListHistory">No app history found. App history will be automatically added after successful execution.</string>
    <string name="pleaseSelectAFutureDateTime">Please select a future date-time.</string>
</resources>