<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_16sdp"
    android:layout_marginRight="@dimen/_16sdp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:text="@string/delete_title"
                android:textColor="@color/warning"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/removeThisApp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frmNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_50sdp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/_43sdp"
            android:layout_height="@dimen/_43sdp"
            app:backgroundTint="@color/soft_green"
            android:padding="@dimen/_5sdp"
            android:contentDescription="@string/cancelDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:text="@string/no"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frmOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            app:backgroundTint="@color/warning"
            android:contentDescription="@string/delete_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </FrameLayout>
</FrameLayout>