<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlDashboardMainLayout"
    android:background="#F6F6F6"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddAppActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:background="@color/titleBar"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_height="?actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:foreground="?attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/addApp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/ivBack"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_4sdp">
                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="normal"
                        android:text="@string/addApp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textAlignment="gravity"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlScheduleApp"
        android:layout_below="@+id/appBarLayout"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectApp"
                android:textColor="@color/text_color_inner"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/rlGoToAppList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGoToAppList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/soft_blue"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/ivAppListIcon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_app_list_add_24"
                        android:contentDescription="@string/addApp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/goToAppList"
                    android:layout_toEndOf="@+id/cvGoToAppList"
                    android:textColor="@color/text_color_inner"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSelectApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAppIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/ivSelectedAppIcon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_launcher_background"
                        android:contentDescription="@string/addApp" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/cvAppIcon">

                    <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectApp"
                        android:textColor="@color/text_color_inner"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvPackageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectApp"
                        android:textColor="@color/text_color_inner"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheduleTiming"
                android:textColor="@color/text_color_inner"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"/>

            <RelativeLayout
                android:id="@+id/rlScheduleTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/ivScheduleIconStatus"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_baseline_alarm_off_24"
                    android:contentDescription="@string/addApp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ivScheduleIconStatus">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_time_24"
                            android:contentDescription="@string/addApp" />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selectDate"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:textColor="@color/text_color_inner"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_date_24"
                            android:contentDescription="@string/addApp" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selectTime"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:textColor="@color/text_color_inner"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/text_color_inner"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"/>

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg_tint"
                android:hint="@string/examplehint"
                android:inputType="text"
                android:textColor="@color/black_700"
                android:textColorHint="@color/bg_tint"
                android:textSize="@dimen/_14sdp"
                android:autofillHints="" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rlScheduleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:elevation="@dimen/_5sdp">

        <Button
            android:id="@+id/btnScheduleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/footer"
            android:text="@string/scheduleApp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            />

    </RelativeLayout>

</RelativeLayout>