<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:background="@color/titleBar"
        android:visibility="visible"
        android:paddingStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_height="?actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="normal"
                    android:text="@string/appSchedulerTitle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/addApp"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:contentDescription="@string/addApp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_app_add_24"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srDashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlAppList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appBarLayout"
                android:background="@color/white"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAppList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_3sdp"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_app_list" />
            </RelativeLayout>



        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/rlEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_empty"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/emptyListHome" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emptyListHome"
            android:gravity="center"
            android:layout_below="@+id/ivEmpty"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_16sdp"/>
    </RelativeLayout>


</RelativeLayout>