<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".view.AppHistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:background="@color/titleBar"
        android:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:contentDescription="@string/addApp"
                    android:foreground="?attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/ivBack"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/appSchedulerHistoryTitle"
                        android:textAlignment="gravity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srDashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollViewHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlAppHistoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_16sdp"
                android:layout_below="@+id/appBarLayout"
                android:background="@color/white"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAppHistoryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_3sdp"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_app_list"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <RelativeLayout
        android:id="@+id/rlEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_empty"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/emptyListHistory" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emptyListHistory"
            android:gravity="center"
            android:layout_below="@+id/ivEmpty"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_16sdp"/>
    </RelativeLayout>


</RelativeLayout>